<resources>
    <string name="app_name">Teachers</string>

    <string name="failure_no_internet">Theres is no internet connection</string>
    <string name="failure_db">We could not connect to the database</string>
    <string name="failure_unauthorized">You are no logged in</string>

    <string name="text_password">Password</string>
    <string name="text_enrollment">Enrollment</string>
    <string name="text_login">Login</string>
    <string name="text_logout">Logout</string>
    <string name="text_do_it">Do it!</string>

    <string name="text_edit">Edit</string>

    <string name="text_no_info">There is no information</string>
    <string name="text_query_hint">Course name</string>
    <string name="text_students_query_hint">Student name</string>

    <string name="failure_user_not_found">User or password incorrect</string>
    <string name="text_courses">Courses</string>
    <string name="text_profile">Profile</string>

    <string name="failure_courses_not_found">We could not find the courses</string>

    <string name="failure_complete_form">Fill the form correctly</string>
    <string name="text_hint_name">Name</string>
    <string name="text_hint_first_lastname">First lastname</string>
    <string name="text_hint_second_last_name">Second last name</string>
    <string name="text_hint_email">Email</string>

    <string name="failure_could_not_update">We could not update the information</string>
    <string name="text_success">Success</string>
    <string name="text_set_grades">Set grade(s)</string>
    <string name="text_grade_3">Grade 3</string>
    <string name="text_grade_2">Grade 2</string>
    <string name="text_grade_1">Grade 1</string>

    <string name="failure_bad_grade_for">Incorrect grade for partial %1$d</string>
    <string name="text_updated_grade">Success update grade for partial %1$d</string>

</resources>